fix: improve images with uneven aspect ratio
Closes #5

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -106,6 +106,7 @@
   width: 350px;
   text-decoration: none;
   font-size: 1.2rem;
+  line-height: 1.5;
   border: 1px solid #0070f3;
   margin: 10px;
   border-radius: 10px;
